Inline CSS added

--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
 <head>
   <meta charset="utf-8">
   <title>֍ Raj Mohan's Personal Site</title>
+  <style media="screen">
+    body{
+      background-color:#e3fdfd;
+    }
+    hr{
+      border-style:none;
+      border-top-style: dotted;
+      border-color:gray;
+      border-width: 5px;
+      width: 5%
+    }
+    img{
+      height: 350px;
+    }
+  </style>
 </head>
 
-<body>
+<body >
   <table>
     <tr>
-      <td> <img src="Images/Profile_Pic.jpg" alt="My Profile Picture" style=width:300px;height:400px></td>
+      <td> <img src="Images/Profile_Pic.jpg" alt="My Profile Picture"></td>
       <td>
         <h1>Raj Mohan</h1>
         <p>
